changements contenus textuels page d'accueil anglais

--- a/en/index.html
+++ b/en/index.html
@@ -23,16 +23,16 @@
         <nav class="menu">
             <ul>
                 <p>ARTICLES</p>
-                <li><a href="/fr/page article 1.html">RÉPLIQUE</a></li>
+                <li><a href="/fr/page article 1.html">LINE</a></li>
                 <li><a href="/fr/page article 2.html">FILM</a></li>
-                <li><a href="/fr/page article 3.html">RÉALISATEUR</a></li>
-                <li><a href="/fr/page article 4.html">BANDE SON</a></li>
-                <li><a href="/fr/page article 5.html">LIVRE</a></li>
+                <li><a href="/fr/page article 3.html">DIRECTOR</a></li>
+                <li><a href="/fr/page article 4.html">SOUNDTRACK</a></li>
+                <li><a href="/fr/page article 5.html">BOOK</a></li>
                 <p>INFORMATIONS</p>
-                <li><a href="/fr/page glossaire.html">GLOSSAIRE</a></li>
-                <li><a href="/fr/page à propos.html">A PROPOS</a></li>
+                <li><a href="/fr/page glossaire.html">GLOSSARY</a></li>
+                <li><a href="/fr/page à propos.html">ABOUT US</a></li>
                 <li><a href="/fr/page contact.html">CONTACT</a></li>
-                <li><a href="/fr/page autres projets.html">AUTRES PROJETS</a></li>
+                <li><a href="/fr/page autres projets.html">OTHER PROJETS</a></li>
                 <hr class="ligne-1">
                 <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
             </ul>
@@ -42,58 +42,58 @@
         <img src="/public/img/jake et neytiri proches.webp" alt="">
         <p class="titre-1">AVATAR</p>
         <hr class="ligne-1">
-        <cite class="citation">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
+        <cite class="citation">Why is it that whenever a people are settled on something we desire, they become our enemy, justifying the plunder?</cite>
         <img class="fleche" src="/public/icones/fleche.svg" alt="">
     </section>
     <section>
         <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
-        <p class="titre-3">Une réplique marquante</p>
-        <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
+        <p class="titre-3">A striking line</p>
+        <p>Descend into the depths of James Cameron's film 'Avatar' and explore a poignant line that awakens consciousness, challenging greed, imperialism, and our relationship with nature.</p>
         <a href="/fr/page article 1.html">
-        <p class="btn-plus">Voir plus </p>
+        <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
     </section>
     <section>
         <img class="img-cover" src="/public/img/image article 2 page d'accueil.webp" alt="">
-        <p class="titre-3">Un film culte</p>
-        <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
+        <p class="titre-3">Iconic movie</p>
+        <p>Dive into the extraordinary world of Pandora, explore the conflict between humans and the Na'vi, and immerse yourself in a powerful ecological message. Discover how 'Avatar' redefined cinema.</p>
         <a href="/fr/page article 2.html">
-        <p class="btn-plus">Voir plus </p>
+        <p class="btn-plus">See more  </p>
         </a>
         <hr class="ligne-accueil">
     </section>
     <section>
         <img class="img-cover" src="/public/img/image article 3 page d'accueil.webp" alt="">
-        <p class="titre-3">Un réalisateur visionnaire</p>
-        <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
+        <p class="titre-3">A visionary director</p>
+        <p>Discover the exceptional journey of James Cameron, a master of science fiction and an advocate for deep-sea exploration. Dive into the revolutionary impact of 'Avatar' on the film industry.</p>
         <a href="/fr/page article 3.html">
-        <p class="btn-plus">Voir plus </p>
+        <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
     </section>
     <section>
         <img class="img-cover" src="/public/img/image article 4 page d'accueil.webp" alt="">
-        <p class="titre-3">Une bande son envoûtante</p>
-        <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
+        <p class="titre-3">An enchanting soundtrack</p>
+        <p>Discover how the soundtrack of 'Avatar' transports audiences into a world of intense emotions. Explore the magical piece 'Becoming One with 'The People' Becoming One with Neytiri' by James Horner, which is an enchanting musical journey into the universe of Pandora.</p>
         <a href="/fr/page article 4.html">
-        <p class="btn-plus">Voir plus </p>
+        <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
     </section>
     <section>
         <img class="img-cover" src="/public/img/image article 5 page d'accueil.webp" alt="">
-        <p class="titre-3">Un livre captivant</p>
-        <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
+        <p class="titre-3">A captivating book</p>
+        <p>Discover how 'Avatar: The Book' immerses you in the extraordinary universe of James Cameron's film, offering fascinating details about the world of Avatar and an opportunity to experience this immersive adventure in a whole new way.</p>
         <a href="/fr/page article 5.html">
-        <p class="btn-plus">Voir plus </p>
+        <p class="btn-plus">See more </p>
         </a>
     </section>
     <footer class="footer">
         <a href="/fr/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
-        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <p class="texte-1-footer">SOCIAL NETWORKS</p>
         <div class="réseaux-sociaux">
             <a href="https://www.instagram.com/explore/tags/avatar/">
             <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -109,7 +109,7 @@
             </a>
         </div>
         <hr class="ligne-1-2">
-        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <p class="texte-footer">This project is carried out as part of an educational exercise at the University Institute of Technology in Montbéliard for Multimedia and Internet Professions.</p>
         <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
         </a>
