changements liens page d'accueil anglais

--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class=" ">
     <header class="header">
-        <a href="/fr/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
+        <a href="/en/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
         <p class="titre-header">
             Avatar's Legacy
         </p>
@@ -23,18 +23,18 @@
         <nav class="menu">
             <ul>
                 <p>ARTICLES</p>
-                <li><a href="/fr/page article 1.html">LINE</a></li>
-                <li><a href="/fr/page article 2.html">FILM</a></li>
-                <li><a href="/fr/page article 3.html">DIRECTOR</a></li>
-                <li><a href="/fr/page article 4.html">SOUNDTRACK</a></li>
-                <li><a href="/fr/page article 5.html">BOOK</a></li>
+                <li><a href="/en/page article 1.html">LINE</a></li>
+                <li><a href="/en/page article 2.html">FILM</a></li>
+                <li><a href="/en/page article 3.html">DIRECTOR</a></li>
+                <li><a href="/en/page article 4.html">SOUNDTRACK</a></li>
+                <li><a href="/en/page article 5.html">BOOK</a></li>
                 <p>INFORMATIONS</p>
-                <li><a href="/fr/page glossaire.html">GLOSSARY</a></li>
-                <li><a href="/fr/page à propos.html">ABOUT US</a></li>
-                <li><a href="/fr/page contact.html">CONTACT</a></li>
-                <li><a href="/fr/page autres projets.html">OTHER PROJETS</a></li>
+                <li><a href="/en/page glossaire.html">GLOSSARY</a></li>
+                <li><a href="/en/page à propos.html">ABOUT US</a></li>
+                <li><a href="/en/page contact.html">CONTACT</a></li>
+                <li><a href="/en/page autres projets.html">OTHER PROJETS</a></li>
                 <hr class="ligne-1">
-                <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
+                <a href="/fr/index.html"><img class="flag" src="/public/img/french.webp" alt="drapeau francais"></a>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
         <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
         <p class="titre-3">A striking line</p>
         <p>Descend into the depths of James Cameron's film 'Avatar' and explore a poignant line that awakens consciousness, challenging greed, imperialism, and our relationship with nature.</p>
-        <a href="/fr/page article 1.html">
+        <a href="/en/page article 1.html">
         <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
@@ -58,7 +58,7 @@
         <img class="img-cover" src="/public/img/image article 2 page d'accueil.webp" alt="">
         <p class="titre-3">Iconic movie</p>
         <p>Dive into the extraordinary world of Pandora, explore the conflict between humans and the Na'vi, and immerse yourself in a powerful ecological message. Discover how 'Avatar' redefined cinema.</p>
-        <a href="/fr/page article 2.html">
+        <a href="/en/page article 2.html">
         <p class="btn-plus">See more  </p>
         </a>
         <hr class="ligne-accueil">
@@ -67,7 +67,7 @@
         <img class="img-cover" src="/public/img/image article 3 page d'accueil.webp" alt="">
         <p class="titre-3">A visionary director</p>
         <p>Discover the exceptional journey of James Cameron, a master of science fiction and an advocate for deep-sea exploration. Dive into the revolutionary impact of 'Avatar' on the film industry.</p>
-        <a href="/fr/page article 3.html">
+        <a href="/en/page article 3.html">
         <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
@@ -76,7 +76,7 @@
         <img class="img-cover" src="/public/img/image article 4 page d'accueil.webp" alt="">
         <p class="titre-3">An enchanting soundtrack</p>
         <p>Discover how the soundtrack of 'Avatar' transports audiences into a world of intense emotions. Explore the magical piece 'Becoming One with 'The People' Becoming One with Neytiri' by James Horner, which is an enchanting musical journey into the universe of Pandora.</p>
-        <a href="/fr/page article 4.html">
+        <a href="/en/page article 4.html">
         <p class="btn-plus">See more </p>
         </a>
         <hr class="ligne-accueil">
@@ -85,12 +85,12 @@
         <img class="img-cover" src="/public/img/image article 5 page d'accueil.webp" alt="">
         <p class="titre-3">A captivating book</p>
         <p>Discover how 'Avatar: The Book' immerses you in the extraordinary universe of James Cameron's film, offering fascinating details about the world of Avatar and an opportunity to experience this immersive adventure in a whole new way.</p>
-        <a href="/fr/page article 5.html">
+        <a href="/en/page article 5.html">
         <p class="btn-plus">See more </p>
         </a>
     </section>
     <footer class="footer">
-        <a href="/fr/index.html">
+        <a href="/en/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
         <p class="texte-1-footer">SOCIAL NETWORKS</p>
