--- a/en/page article 4.html
+++ b/en/page article 4.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="/fr/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
+        <a href="/en/index.html"><img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site"></a>
         <p class="titre-header">
             Avatar's Legacy
         </p>
@@ -23,18 +23,18 @@
         <nav class="menu">
             <ul>
                 <p>ARTICLES</p>
-                <li><a href="/fr/page article 1.html">RÉPLIQUE</a></li>
-                <li><a href="/fr/page article 2.html">FILM</a></li>
-                <li><a href="/fr/page article 3.html">RÉALISATEUR</a></li>
-                <li><a href="/fr/page article 4.html">BANDE SON</a></li>
-                <li><a href="/fr/page article 5.html">LIVRE</a></li>
+                <li><a href="/en/page article 1.html">LINE</a></li>
+                <li><a href="/en/page article 2.html">FILM</a></li>
+                <li><a href="/en/page article 3.html">DIRECTOR</a></li>
+                <li><a href="/en/page article 4.html">SOUNDTRACK</a></li>
+                <li><a href="/en/page article 5.html">BOOK</a></li>
                 <p>INFORMATIONS</p>
-                <li><a href="/fr/page glossaire.html">GLOSSAIRE</a></li>
-                <li><a href="/fr/page à propos.html">A PROPOS</a></li>
-                <li><a href="/fr/page contact.html">CONTACT</a></li>
-                <li><a href="/fr/page autres projets.html">AUTRES PROJETS</a></li>
+                <li><a href="/en/page glossaire.html">GLOSSARY</a></li>
+                <li><a href="/en/page à propos.html">ABOUT US</a></li>
+                <li><a href="/en/page contact.html">CONTACT</a></li>
+                <li><a href="/en/page autres projets.html">OTHER PROJETS</a></li>
                 <hr class="ligne-1">
-                <a href=""><img class="flag" src="/public/img/english.webp" alt="drapeau anglais"></a>
+                <a href="/fr/index.html"><img class="flag" src="/public/img/french.webp" alt="drapeau francais"></a>
             </ul>
         </nav>
     </header>
