--- a/en/page article 4.html
+++ b/en/page article 4.html
@@ -59,10 +59,10 @@
         <p>En conclusion, la musique d' "Avatar", et en particulier "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", montre la capacité du film à transporter les spectateurs dans un autre monde et à évoquer des émotions puissantes. La composition de James Horner ajoute une couche supplémentaire de profondeur à la narration, en faisant une part essentielle de l'expérience cinématographique. Cette musique et les musiques d’Avatar en général participent au fait que le film dure dans le temps.</p>
     </section>
     <footer class="footer">
-        <a href="/fr/index.html">
+        <a href="/en/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
-        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <p class="texte-1-footer">SOCIAL NETWORKS</p>
         <div class="réseaux-sociaux">
             <a href="https://www.instagram.com/explore/tags/avatar/">
             <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -78,7 +78,7 @@
             </a>
         </div>
         <hr class="ligne-1-2">
-        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <p class="texte-footer">This project is carried out as part of an educational exercise at the University Institute of Technology in Montbéliard for Multimedia and Internet Professions.</p>
         <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
         </a>
