--- a/en/page à propos.html
+++ b/en/page à propos.html
@@ -45,10 +45,10 @@
         <p>J’ai créé ce site sur Avatar car je suis un fan de ce film et je voulais partager cet univers à d’autres personnes. Je voulais créer un site pour faire découvrir cet univers aux personnes qui n’ont jamais vu le film mais également rappeler de bons souvenirs à ceux qui ont vu le site ou leur faire découvrir de nouvelles choses sur cet univers.</p>
     </section>
     <footer class="footer">
-        <a href="/fr/index.html">
+        <a href="/en/index.html">
         <img class="logo-footer" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo footer">
         </a>
-        <p class="texte-1-footer">RÉSEAUX SOCIAUX</p>
+        <p class="texte-1-footer">SOCIAL NETWORKS</p>
         <div class="réseaux-sociaux">
             <a href="https://www.instagram.com/explore/tags/avatar/">
             <img class="logos-footer" src="/public/icones/logo Instagram.svg" alt="">
@@ -64,7 +64,7 @@
             </a>
         </div>
         <hr class="ligne-1-2">
-        <p class="texte-footer">Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <p class="texte-footer">This project is carried out as part of an educational exercise at the University Institute of Technology in Montbéliard for Multimedia and Internet Professions.</p>
         <a href="http://www.iut-bm.univ-fcomte.fr/pages/fr/dpt-mmi---actualites-18542.html">
         <img class="logo-mmi-footer" src="/public/icones/logo MMI.svg" alt="">
         </a>
