chamgements contenus textuels anglais page a propos

--- a/en/page à propos.html
+++ b/en/page à propos.html
@@ -40,9 +40,9 @@
     </header>
     <section>
         <img class="img-avatar" src="/public/img/Avatar.webp" alt="">
-        <p>Je suis Gabriel Moreau, actuellement étudiant au BUT MMI de Montbéliard en première année. </p>
-        <p>Ce projet à été créé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard.</p>
-        <p>J’ai créé ce site sur Avatar car je suis un fan de ce film et je voulais partager cet univers à d’autres personnes. Je voulais créer un site pour faire découvrir cet univers aux personnes qui n’ont jamais vu le film mais également rappeler de bons souvenirs à ceux qui ont vu le site ou leur faire découvrir de nouvelles choses sur cet univers.</p>
+        <p>I am Gabriel Moreau, currently a first-year student at the University Institute of Technology in Montbéliard studying Multimedia and Internet Professions (MMI). </p>
+        <p>This project was created as part of an educational exercise within the MMI department at Montbéliard.</p>
+        <p>I created this website about Avatar because I'm a huge fan of the film, and I wanted to share this universe with others. I aimed to create a site that introduces this world to people who have never seen the movie, while also evoking good memories for those who have seen it, or introducing them to new aspects of this universe.</p>
     </section>
     <footer class="footer">
         <a href="/en/index.html">
