modifications contenus textuels page article 1

--- a/en/page article 1.html
+++ b/en/page article 1.html
@@ -39,26 +39,26 @@
         </nav>
     </header>
     <section class="section-1-1">
-        <p class="titre-2">Une réplique</p>
-        <p class="titre-2-bis">marquante</p>
+        <p class="titre-2">A striking </p>
+        <p class="titre-2-bis">quote</p>
         <hr class="ligne-1-article">
         <img class="img-cover" src="/public/img/image article 1 page d'accueil.webp" alt="">
-        <cite class="titre-4">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
-        <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
-        <p>Le film Avatar de James Cameron, en plus du divertissement, traite de beaucoup de thèmes de notre société comme la nature, la technologie, la guerre ou encore la moralité. L'une des réplique mémorables du film est : "Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</p>
+        <cite class="titre-4">"Why is it that as soon as a people are settled on something we covet, that people becomes our enemy, justifying plunder?"</cite>
+        <p>Dive into the depths of James Cameron's film 'Avatar' and explore a quote that awakens consciousness, challenging greed, imperialism, and our relationship with nature.</p>
+        <p>"Avatar," directed by James Cameron, delves into numerous societal themes beyond entertainment, such as nature, technology, war, and morality. One of the memorable quotes from the film is: "Why is it that as soon as a people are settled on something we covet, that people becomes our enemy, justifying plunder?"</p>
         <img class="img-articles" src="/public/img/jake et neytiri arme.webp" alt="">
-        <p>Cette réplique est prononcée par le personnage de Jake Sully. Elle critique la nature humaine, plus particulièrement de l'avidité et de l'impérialisme. Elle coïncide avec la réalité, que ce soit celle du passé ou celle d’aujourd’hui concernant la conquête et l'exploitation des ressources.</p>
+        <p>This quote is spoken by the character Jake Sully. It criticizes human nature, specifically greed and imperialism. It coincides with reality, whether it's the past or the present regarding the conquest and exploitation of resources.</p>
         <img class="img-articles" src="/public/img/j serious.webp" alt="">
-        <p>L'histoire d'Avatar se déroule sur Pandora, qui est une planète riche en ressources précieuses. Elle est peuplée par les Na'vi, une espèce autochtone vivant en harmonie avec leur environnement. </p>
+        <p>Avatar's story unfolds on Pandora, a planet rich in valuable resources. It's inhabited by the Na'vi, an indigenous species living in harmony with their environment. </p>
         <img class="img-articles" src="/public/img/pandora ile.webp" alt="">
-        <p>Les humains, représentés par la Corporation RDA, veulent exploiter le minerai rare appelé unobtainium, qui se trouve sous le territoire des Na'vi. Cette quête impitoyable de ressources conduit à la déshumanisation, à la violence et au mépris envers les autochtones.</p>
+        <p>The humans, represented by the RDA Corporation, aim to exploit the rare mineral called unobtainium, located beneath the Na'vi's territory. This ruthless quest for resources leads to dehumanization, violence, and disregard for the indigenous population.</p>
         <img class="img-articles" src="/public/img/troupe corp.webp" alt="">
-        <p>La réplique met en lumière le côté cruel de l'impérialisme et de la colonisation, où les populations autochtones sont considérées comme des obstacles à la poursuite de la richesse et du pouvoir. Lorsque les ressources deviennent l'objectif ultime, les populations autochtones sont souvent dépeintes comme des ennemis, justifiant ainsi l'exploitation de leurs terres et de leurs cultures.</p>
+        <p>The quote sheds light on the cruel aspects of imperialism and colonization, where indigenous populations are seen as obstacles to the pursuit of wealth and power. When resources become the ultimate goal, indigenous populations are often depicted as enemies, justifying the exploitation of their lands and cultures.</p>
         <img class="img-articles" src="/public/img/rocher.webp" alt="">
-        <p>L'histoire du monde est marquée par de nombreux exemples de cette triste réalité. Les Européens qui ont colonisé les Amériques ont justifié l'oppression des peuples autochtones en invoquant leur supériorité et leur droit divin sur les terres et les ressources. Également, de nos jours, des conflits naissent autour de la possession de ressources comme le pétrole, les minerais rares et l'eau, où les populations autochtones sont souvent sacrifiées au nom du profit.</p>
+        <p>The history of the world is marked by numerous examples of this grim reality. Europeans who colonized the Americas justified the oppression of indigenous peoples by invoking their superiority and divine right to lands and resources. Similarly, in modern times, conflicts arise over the ownership of resources like oil, rare minerals, and water, where indigenous populations are often sacrificed in the name of profit.</p>
         <img class="img-articles" src="/public/img/battle vaisseau.webp" alt="">
-        <p>Cette réplique représente bien l’histoire du film, qui est une métaphore de la vie réelle. Elle nous montre que la convoitise et l'avidité peuvent conduire à des conflits dévastateurs. Elle nous fait comprendre qu’il ne faut pas détruire la nature et d'autres peuples. Pour nous faire prendre conscience et ne pas reproduire la même chose. Au lieu de considérer les ressources comme des biens à exploiter sans scrupules, nous devrions chercher des moyens de coopérer, de préserver la planète et de respecter les droits des peuples autochtones.</p>
-        <p>Elle invite donc à se mettre à la place de ceux qui sont persécutés pour prendre conscience de la cruauté de certains actes, autant pour les personnes concernées que pour l’environnement.</p>  
+        <p>This quote truly encapsulates the film's narrative, serving as a metaphor for real life. It shows us how greed and covetousness can lead to devastating conflicts. It emphasizes the importance of not destroying nature and other cultures for our selfish gain. Its purpose is to raise awareness and prevent a recurrence of similar mistakes. Instead of viewing resources as something to exploit recklessly, we should seek ways to cooperate, preserve the planet, and respect the rights of indigenous peoples.</p>
+        <p>Indeed, it encourages us to empathize with those who are persecuted to understand the cruelty of certain actions, both for the individuals involved and for the environment.</p>  
     </section>
     <footer class="footer">
         <a href="/en/index.html">
