--- a/en/page article 2.html
+++ b/en/page article 2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Un film culte</title>
+    <title>Iconic film</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -39,34 +39,35 @@
         </nav>
     </header>
     <section class="section-1-1">
-        <p class="titre-2">Un film</p>
-        <p class="titre-2-bis">culte</p>
+        <p class="titre-2">Iconic </p>
+        <p class="titre-2-bis">film</p>
         <hr class="ligne-1-article">
         <img class="img-cover" src="/public/img/image article 2 page d'accueil.webp" alt="">
         <p class="titre-4">Avatar<p>
-        <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
-        <p>Le titre du film est Avatar. Il a été réalisé par James Cameron en 2009. C’est un film de science-fiction qui a révolutionné le cinéma d’animation et même le cinéma en général grâce à  un univers extraordinaire, une histoire captivante et des personnages inoubliables.</p>
+        <p>Dive into the extraordinary world of Pandora, explore the conflict between humans and the Na'vi, and immerse yourself in a powerful ecological message. Discover how 'Avatar' redefined cinema.</p>
+        <p> The title of the film is Avatar. It was directed by James Cameron in 2009. It's a science fiction film that revolutionized animation and even cinema in general, thanks to an extraordinary universe, a captivating story, and unforgettable characters.</p>
         <img class="img-articles" src="/public/img/jake et neytiri arme.webp" alt="">
-        <p>Avatar se déroule sur la planète fictive de Pandora, où les humains explorent les ressources naturelles tout en entrant en conflit avec les autochtones, les Na'vi. Au cœur de cette intrigue se trouve le personnage de Jake Sully, incarné par Sam Worthington. Jake, un vétéran paraplégique, qui a la chance de participer au programme Avatar, qui lui permet de contrôler un avatar Na'vi grâce à une interface neurale. Au fur et à mesure de son immersion dans la culture Na'vi, Jake devient un défenseur de leur mode de vie harmonieux, remettant en question les intentions destructrices de l'entreprise minière humaine.</p>
+        <p>Avatar is set on the fictional planet of Pandora, where humans explore natural resources while conflicting with the indigenous Na'vi people. At the heart of this story is the character Jake Sully, played by Sam Worthington. Jake, a paraplegic veteran, gets the opportunity to participate in the Avatar program, allowing him to control a Na'vi avatar through a neural interface. As he immerses himself in Na'vi culture, Jake becomes an advocate for their harmonious way of life, challenging the destructive intentions of the human mining company.</p>
         <img class="img-articles" src="/public/img/j et n regardent la foret.webp" alt="">
-        <p>L'une des caractéristiques les plus frappantes d'Avatar est son utilisation révolutionnaire de la technologie 3D. James Cameron a  réussi à repousser les limites de la cinématographie en créant un monde de Pandora d'une beauté époustouflante. En effet, les images 3D immersives transportent les spectateurs dans un univers qui a beaucoup de détails, avec une faune et une flore exotiques. Les scènes de vol à dos de banshee (créature volante dans le film) et de combats épiques entre les Na'vi et les forces humaines sont des moments inoubliables. </p>
+        <p>One of Avatar's most striking features is its revolutionary use of 3D technology. James Cameron managed to push the boundaries of cinematography by creating a stunningly beautiful world of Pandora. The immersive 3D visuals transport viewers into a highly detailed universe, with exotic fauna and flora. The scenes depicting banshee riding (a flying creature in the film) and the epic battles between the Na'vi and human forces are unforgettable moments. </p>
         <img class="img-articles" src="/public/img/3d corp.webp" alt="">
-        <p>Les acteurs comme Sam Worthington et Zoë Saldana, qui jouent les rôles de Jake Sully et Neytiri qui sont les personnages principaux du film, ont également joué un rôle important dans le succès d’Avatar.</p>
+        <p>
+            Actors like Sam Worthington and Zoë Saldana, portraying the roles of Jake Sully and Neytiri, the film's main characters, also played pivotal roles in the success of Avatar.</p>
         <img class="img-articles" src="/public/img/j et n derriere.webp" alt="">
-        <p>Le message écologique profondément ancré dans Avatar est une autre caractéristique qui le distingue. Le film met en lumière les conséquences néfastes de l'exploitation des ressources naturelles au détriment de la préservation de l'environnement. Cette facette du film sur l'avidité humaine et la nécessité de protéger notre planète est une métaphore avec la réalité pour faire prendre conscience aux personnes qu’il faut protéger et respecter la planète et ne pas être aveuglé par l'avidité et notre soif de ressources.</p>
+        <p>The deeply embedded environmental message in Avatar is another distinguishing feature. The film highlights the detrimental consequences of exploiting natural resources at the expense of environmental preservation. This aspect of the film, portraying human greed and the necessity of protecting our planet, serves as a metaphor for reality, aiming to raise awareness about the need to protect and respect our planet without being blinded by greed and our thirst for resources.</p>
         <img class="img-articles" src="/public/img/plein de pollen.webp" alt="">
-        <p>La bande originale d'Avatar, composée par James Horner, ajoute une dimension émotionnelle au film. Les mélodies envoûtantes et les thèmes musicaux sensationnels permettent de transporter le public encore plus dans l'univers de Pandora.</p>
+        <p>The original score of Avatar, composed by James Horner, adds an emotional dimension to the film. The captivating melodies and sensational musical themes further transport the audience into the world of Pandora.</p>
         <img class="img-articles" src="/public/img/bande son img.webp" alt="">
-        <p>Mais le succès d’Avatar n’est pas seulement lié à son contenu. Le film a battu des records au box-office, devenant le film le plus rentable de tous les temps jusqu'à cette date. Cette réussite commerciale a également conduit à la création d'une franchise étendue, avec plusieurs suites prévues pour les années à venir. Avatar est un film qui restera dans l’histoire du cinéma.</p>
+        <p>Indeed, Avatar's success isn't solely tied to its content. The film shattered box office records, becoming the highest-grossing film of all time until that date. This commercial triumph also led to the development of an extensive franchise, with multiple sequels planned for the coming years. Avatar is a film that will go down in cinema history.</p>
     </section>
     <section>
         <p class="titre-4-bis">
-            Bande annonce du film
+            Movie trailer
         </p>
         <a href="https://youtu.be/O1CzgULNRGs?si=e1vxvkJbmTzKspTX">
         <img class="img-articles" src="/public/img/bande-annonce.webp" alt="">
         </a>
-        <p class="titre-4-bis">AUTRES FILMS</p>
+        <p class="titre-4-bis">OTHER FILMS</p>
     </section>
     <footer class="footer">
         <a href="/en/index.html">
