--- a/en/page article 3.html
+++ b/en/page article 3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Un réalisateur visionnaire</title>
+    <title>A visionary director</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -39,23 +39,24 @@
         </nav>
     </header>
     <section class="section-1-1">
-        <p class="titre-2">Un réalisateur</p>
-        <p class="titre-2-bis">visionnaire</p>
+        <p class="titre-2">A visionary </p>
+        <p class="titre-2-bis">director</p>
         <hr class="ligne-1-article">
         <img class="img-cover" src="/public/img/image article 3 page d'accueil.webp" alt="">
         <p class="titre-4">James Cameron</p>
-        <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
-        <p>James Cameron est un réalisateur, scénariste et producteur de renom.C’est un réalisateur qui a révolutionné l'industrie cinématographique et qui est très renommé dans ce milieu. Né le 16 août 1954 au Canada, Cameron a acquis une renommée mondiale grâce à son talent pour la réalisation de films qui repoussent les limites de la technologie cinématographique.</p>
+        <p>Discover the extraordinary journey of James Cameron, a master of science fiction and an advocate for deep-sea exploration. Delve into the revolutionary impact of 'Avatar' on the film industry.</p>
+        <p>James Cameron is a renowned director, screenwriter, and producer. He's a filmmaker who revolutionized the film industry and holds a prominent position in the field. Born on August 16, 1954, in Canada, Cameron gained worldwide acclaim for his talent in directing films that push the boundaries of cinematic technology.</p>
         <img class="img-articles" src="/public/img/awards.webp" alt="">
-        <p>Ce qui différencie James Cameron, c’est qu’il est spécialisé dans les films de science-fiction. En 1984, il a réalisé “The Terminator”,un film de science-fiction qui a lancé sa carrière et établi Arnold Schwarzenegger comme une icône du cinéma. Il a ensuite dirigé "Aliens" en 1986, qui est la suite du film original de Ridley Scott. Mais c'est avec "Avatar" en 2009 qu'il a marqué l'histoire du cinéma.</p>
+        <p>What sets James Cameron apart is his specialization in science fiction films. In 1984, he directed "The Terminator," a sci-fi film that launched his career and established Arnold Schwarzenegger as a cinema icon. He then directed "Aliens" in 1986, which is the sequel to Ridley Scott's original film. However, it was with "Avatar" in 2009 that he made history in cinema.</p>
         <img class="img-articles" src="/public/img/avatar img.webp" alt="">
-        <p>"Avatar" a révolutionné l'utilisation de la technologie 3D au cinéma, créant un monde extraordinaire sur la planète Pandora. Le film a battu des records au box-office et a remporté plusieurs Oscars, en révolutionnant la réalisation cinématographique et la science-fiction.</p>
+        <p>"Avatar" revolutionized the use of 3D technology in cinema, creating an extraordinary world on the planet Pandora. The film broke box office records and won several Oscars, revolutionizing filmmaking and science fiction.</p>
         <img class="img-articles" src="/public/img/pandora ile.webp" alt="">
-        <p>En plus du cinéma de science-fiction, James Cameron a été l'un des réalisateurs les plus engagés dans la réalisation de documentaires liés à l'exploration des fonds marins. Son film "The Abyss" en 1989 et "Titanic" en 1997 par exemple montre son intérêt pour les océans. Il a même effectué des plongées en eau profonde et a réalisé des documentaires sur ses explorations, contribuant ainsi à sensibiliser le public à l'importance de la préservation des océans. Qui est d’ailleurs un thème très important dans la suite d’Avatar, le film “Avatar 2 : La voie de l’eau”.</p>
+        <p>In addition to his work in science fiction cinema, James Cameron has been one of the most committed directors in creating documentaries related to deep-sea exploration. His films such as "The Abyss" in 1989 and "Titanic" in 1997, for example, showcase his interest in oceans. He even undertook deep-sea dives and produced documentaries about his explorations, thereby contributing to raising public awareness about the importance of ocean preservation. This remains a crucial theme in the sequel to Avatar, the film "Avatar 2: The Way of Water".</p>
         <img class="img-articles" src="/public/img/creature eau.webp" alt="">
-        <p>James Cameron est détermination et perfectionniste. Mais il est également tenace concernant la réalisation de ses projets, notamment "Titanic" et "Avatar," qui ont été des entreprises massives avec beaucoup de défis techniques.</p>
-        <p>Au fil des années, James Cameron a prouvé sa capacité à raconter des histoires puissantes tout en tirant parti des dernières avancées technologiques pour donner vie à ses films. </p>
-        <p>James Cameron est un réalisateur visionnaire et un pilier du cinéma et va peut-être encore plus prouver sa valeur avec les suites des films avatar.</p>
+        <p>James Cameron is known for his determination and perfectionism. He's also persistent when it comes to realizing his projects, notably "Titanic" and "Avatar," both massive undertakings with numerous technical challenges.</p>
+        <p>Over the years, James Cameron has demonstrated his ability to tell powerful stories while leveraging the latest technological advancements to bring his films to life. </p>
+        <p>
+            James Cameron is a visionary director and a stalwart in the film industry, and he might further prove his worth with the sequels to the Avatar films.</p>
     </section>
     <footer class="footer">
         <a href="/en/index.html">
