modifications contenu textuel anglais page article 4

--- a/en/page article 4.html
+++ b/en/page article 4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Une bande son envoûtante</title>
+    <title>An enchanting soundtrack</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -39,24 +39,25 @@
         </nav>
     </header>
     <section class="section-1-1">
-        <p class="titre-2">Une bande son</p> 
-        <p class="titre-2-bis">envoûtante</p>
+        <p class="titre-2">An enchanting </p> 
+        <p class="titre-2-bis">soundtrack</p>
         <hr class="ligne-1-article">
         <img class="img-cover" src="/public/img/image article 4 page d'accueil.webp" alt="">
-        <p class="titre-4">Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri</p>
-        <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
-        <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" - Un Voyage Musical dans Avatar</p>
-        <p>L'épopée de James Cameron en 2009, "Avatar", a captivé les spectateurs avec ses images à couper le souffle et sa technologie 3D révolutionnaire, mais il a également laissé une empreinte indélébile grâce à sa bande-son envoûtante. L'un des morceaux les plus marquants est "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", composé par James Horner.</p>
+        <p class="titre-4">Becoming One with 'The People' Becoming One with Neytiri</p>
+        <p>Discover how the soundtrack of 'Avatar' transports audiences into a world of intense emotions. Explore the enchanting musical piece 'Becoming One with 'The People' Becoming One with Neytiri' by James Horner, which is a captivating musical journey into the universe of Pandora.</p>
+        <p>"Becoming One with 'The People' Becoming One with Neytiri" - A Musical Journey into Avatar</p>
+        <p>James Cameron's 2009 epic, "Avatar," mesmerized audiences with its breathtaking visuals and groundbreaking 3D technology, but it also left an indelible mark through its enchanting soundtrack. One of the most notable tracks is "Becoming One with 'The People' Becoming One with Neytiri," composed by James Horner.</p>
         <img class="img-articles" src="/public/img/bande son img.webp" alt="">
-        <p>La bande-son fait partie intégrante de la narration du film, elle permet de renforcer le lien émotionnel du public avec les personnages et le monde époustouflant de Pandora. "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" se distingue comme un chef-d'œuvre musical au sein de la partition du film.</p>
-        <p>Le morceau accompagne une scène cruciale du film lorsque Jake Sully, le protagoniste, est initié à la culture Na'vi par Neytiri, l'héroïne féminine. Alors que la musique s'intensifie, elle reflète la transformation de Jake, passant d'étranger à véritable membre de la tribu Na'vi, symbolisant sa connexion avec Neytiri, tant sur le plan émotionnel que spirituel.</p>
+        <p>The soundtrack is an integral part of the film's storytelling, enhancing the audience's emotional connection to the characters and the stunning world of Pandora. "Becoming One with 'The People' Becoming One with Neytiri" stands out as a musical masterpiece within the film's score.</p>
+        <p>
+            The piece accompanies a crucial scene in the film where Jake Sully, the protagonist, is initiated into the Na'vi culture by Neytiri, the female lead. As the music intensifies, it mirrors Jake's transformation from an outsider to a true member of the Na'vi tribe, symbolizing his connection with Neytiri, both emotionally and spiritually.</p>
         <img class="img-articles" src="/public/img/j et n gros plan.webp" alt="">
-        <p>Les voix et l'utilisation d'instruments traditionnels évoquent un sentiment de beauté surnaturel, reflétant parfaitement le monde enchanteur et harmonieux de Pandora.</p>
+        <p>The voices and use of traditional instruments evoke a sense of supernatural beauty, perfectly reflecting the enchanting and harmonious world of Pandora.</p>
         <img class="img-articles" src="/public/img/j et n regardent la foret.webp" alt="">
-        <p>La capacité de la composition à transmettre un sentiment d'appartenance et d'unité est l'un de ses aspects les plus remarquables de cette musique. Elle met en avant le voyage de Jake, son acceptation par les Na'vi et son amour croissant pour Neytiri. La musique transcende les barrières linguistiques et culturelles, permettant aux publics du monde entier de se connecter avec les personnages et les thèmes du film de manière profonde et émotionnelle.</p>
+        <p>The composition's ability to convey a sense of belonging and unity is one of its most remarkable aspects. It highlights Jake's journey, his acceptance by the Na'vi, and his growing love for Neytiri. The music transcends linguistic and cultural barriers, enabling audiences worldwide to connect deeply and emotionally with the characters and themes of the film.</p>
         <img class="img-articles" src="/public/img/j et n grotte.webp" alt="">
-        <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" est également devenu un des morceaux favoris des fans, souvent interprété lors de concerts symphoniques en direct et célébré pour sa beauté intemporelle. Les personnes ayant vu le film se souviennent pendant bien longtemps la mélodie de la musique, ce qui rappelle le pouvoir transformateur de la musique dans la narration cinématographique.</p>
-        <p>En conclusion, la musique d' "Avatar", et en particulier "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", montre la capacité du film à transporter les spectateurs dans un autre monde et à évoquer des émotions puissantes. La composition de James Horner ajoute une couche supplémentaire de profondeur à la narration, en faisant une part essentielle de l'expérience cinématographique. Cette musique et les musiques d’Avatar en général participent au fait que le film dure dans le temps.</p>
+        <p>"Becoming One with 'The People' Becoming One with Neytiri" has also become a favorite among fans, often performed at live symphonic concerts and celebrated for its timeless beauty. Those who have seen the film remember the melody for a long time, highlighting the transformative power of music in cinematic storytelling.</p>
+        <p>In conclusion, the music of "Avatar," particularly "Becoming One with 'The People' Becoming One with Neytiri," showcases the film's ability to transport audiences to another world and evoke powerful emotions. James Horner's composition adds an extra layer of depth to the storytelling, making it an essential part of the cinematic experience. This music, along with the overall music in Avatar, contributes to the film's enduring legacy.</p>
     </section>
     <footer class="footer">
         <a href="/en/index.html">
