modifications contenu textuel anglais page article 5

--- a/en/page article 5.html
+++ b/en/page article 5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Un livre captivant</title>
+    <title>A captivating book</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
     <link rel="stylesheet" href="/src/css/style.css">
@@ -39,25 +39,26 @@
         </nav>
     </header>
     <section class="section-1-1">
-        <p class="titre-2">Un livre</p>
-        <p class="titre-2-bis">captivant</p>
+        <p class="titre-2">A captivating </p>
+        <p class="titre-2-bis">book</p>
         <hr class="ligne-1-article">
         <img class="img-cover" src="/public/img/image article 5 page d'accueil.webp" alt="">
-        <p class="titre-4">Avatar : Le livre</p>
-        <p>Découvrez comment Avatar: Le roman du film vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
-        <p>Avatar : Le roman du film <br>
-        Les fans de l'univers captivant Avatar, le film épique de science-fiction de James Cameron, peuvent désormais se plonger encore plus profondément dans cette aventure extraordinaire grâce à Avatar: Le roman du film. Cette extension du monde cinématographique offre un regard détaillé sur Pandora, ses habitants, et les histoires qui se cachent derrière cette planète extraordinaire.</p>
+        <p class="titre-4">Avatar: The Book</p>
+        <p>Discover how 'Avatar: The Novelization' transports you into the extraordinary world of James Cameron's film, offering fascinating details about the Avatar universe and an opportunity to experience this immersive adventure in a whole new way.</p>
+        <p>Avatar: The Movie Novel <br>
+            Fans of the captivating universe of Avatar, James Cameron's epic science-fiction film, can now dive even deeper into this extraordinary adventure with "Avatar: The Movie Novel." This expansion of the cinematic world provides a detailed look at Pandora, its inhabitants, and the stories that lie behind this extraordinary planet.</p>
         <img class="img-articles" src="/public/img/bande son.webp" alt="">
-        <p>L'ouvrage, créé en collaboration avec James Cameron et l'écrivain Steven Charles Gould, transporte les lecteurs dans les profondeurs de la jungle luxuriante de Pandora, où les Na'vi vivent en harmonie avec leur environnement. Le livre explore en détail la faune et la flore de Pandora, permettant aux lecteurs de découvrir de nouvelles espèces étonnantes et d'en apprendre davantage sur les créatures iconiques du film, comme les banshees et les thanatos.</p>
+        <p>The book, crafted in collaboration with James Cameron and writer Steven Charles Gould, transports readers into the depths of Pandora's lush jungle, where the Na'vi live in harmony with their environment. It extensively explores Pandora's fauna and flora, enabling readers to discover astonishing new species and learn more about the film's iconic creatures, such as banshees and thanators.</p>
         <img class="img-articles" src="/public/img/animaux forêt.webp" alt="">
-        <p>Mais le livre ne se limite pas à une simple exploration des merveilles naturelles de Pandora. Il plonge également dans l'histoire des Na'vi, leurs traditions, leur culture, et leur relation avec les humains. Les lecteurs pourront découvrir comment les Na'vi vivent en harmonie avec Eywa, l'entité divine de Pandora, et comment ils se sont adaptés pour résister aux menaces extérieures.</p>
+        <p>However, the book goes beyond merely exploring the natural wonders of Pandora. It delves into the history of the Na'vi, their traditions, culture, and their relationship with humans. Readers can discover how the Na'vi live in harmony with Eywa, Pandora's divine entity, and how they have adapted to withstand external threats.</p>
         <img class="img-articles" src="/public/img/arbre shinju.webp" alt="">
-        <p>L'un des aspects les plus attrayants du livre est son exploration des personnages principaux, notamment Neytiri, Jake Sully et le colonel Quaritch. Les lecteurs pourront en apprendre davantage sur leurs origines, leurs motivations et leurs rôles dans l'histoire globale de Pandora. Les détails supplémentaires sur la relation entre Neytiri et Jake offrent un aperçu plus profond de leur lien spécial.</p>
+        <p>
+            One of the most appealing aspects of the book is its exploration of the main characters, including Neytiri, Jake Sully, and Colonel Quaritch. Readers can delve deeper into their origins, motivations, and roles in Pandora's overall story. Additional details about the relationship between Neytiri and Jake provide a deeper insight into their special bond.</p>
         <img class="img-articles" src="/public/img/passion pollen.webp" alt="">
-        <p>De plus, le livre plonge dans les coulisses du film, révélant des informations sur le processus de création, les défis technologiques, et l'engagement des acteurs et de l'équipe de production. Les fans du film trouveront fascinant de découvrir comment la vision de James Cameron s'est concrétisée sur grand écran. Par exemple comme on voit sur l’image ci-dessous, Avatar est le deuxième film à utiliser le motiondesign.</p>
+        <p>The book delves into the behind-the-scenes aspects of the film, revealing insights into the creative process, technological challenges, and the commitment of the cast and production team. Fans of the movie will find it fascinating to discover how James Cameron's vision materialized on the big screen. For instance, as depicted in the image below, Avatar is the second film to utilize motion capture technology.</p>
         <img class="img-articles" src="/public/img/tech.webp" alt="">
-        <p>L'ouvrage offre une opportunité passionnante d'étendre l'expérience Avatar au-delà du cinéma, permettant aux fans de s'immerger davantage dans l'univers de Pandora et d'approfondir leur compréhension de cet extraordinaire monde de science-fiction.</p>
-        <p>En conclusion, Avatar: Le roman du film est un incontournable pour les fans du film. Il offre un voyage fascinant dans l'univers de Pandora, enrichissant la compréhension des personnages, de la culture Na'vi, et de la planète elle-même. C'est une extension épique de l'histoire cinématographique qui ravira les passionnés de Avatar et les plongera plus profondément dans cette aventure immersive. Mais c’est également une autre manière que le film pour découvrir Avatar pour ceux qui ne l’ont pas vu.</p>
+        <p>The book provides an exciting opportunity to expand the Avatar experience beyond the cinema, allowing fans to immerse themselves further in the world of Pandora and deepen their understanding of this extraordinary science-fiction universe.</p>
+        <p>In conclusion, "Avatar: The Movie Novel" is a must-read for fans of the film. It provides a fascinating journey into the world of Pandora, enriching the understanding of the characters, Na'vi culture, and the planet itself. It's an epic extension of the cinematic story that will delight Avatar enthusiasts, immersing them deeper into this immersive adventure. Moreover, it serves as another way for those who haven't seen the film to discover the world of Avatar.</p>
     </section>
     <section>
     </section>
